# sqlfile

./: .gitignore  README.md  __init__.py  pyproject.toml
src/sqlfile/: __init__.py  __main__.py  sqlfile.py
tests/: bulk.py  test_1.py  test_2.py
