[project]
name = "sqlfile"
version = "0.0.1"
description = "My simple Python package"
requires-python = ">=3.0"
keywords = ["python", "sqlite"]
authors = [
    {name = "alexander", email = "no@example.com"},
]
dependencies = [
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]